--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,11 @@
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage"
   },
-    "jest": {
+  "jest": {
     "testEnvironment": "node",
-    "setupFilesAfterEnv": ["<rootDir>/tests/setup.js"]
+    "setupFilesAfterEnv": [
+      "<rootDir>/tests/setup.js"
+    ]
   },
   "keywords": [],
   "author": "",
@@ -25,6 +27,7 @@
     "mongoose": "^8.16.4"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "jest": "^30.0.4",
     "nodemon": "^3.1.10",
     "supertest": "^7.1.3"
